modif README.md & some files

--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -1,4 +1,4 @@
-<div class="bg-dark text-white">DEMO -> Application web réalisé pour une évaluation en cours de formation.</div>
+<div class="bg-dark text-warning">DEMO -> Application web réalisé pour une évaluation en cours de formation.</div>
 <nav class="navbar navbar-expand-lg bg-dark text-white" data-bs-theme="dark">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="{{path('app_home')}}">
