--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% endblock %}
 {% block body %}
 	<div class="container mt-3 mb-3">
-		<h1 class="">Garage Vincent PARROT - réparation automobile à Toulouse
+		<h1 class="mt-5 mb-5">Garage Vincent PARROT - réparation automobile à Toulouse
 		</h1>
 	</div>
 	<div class="raw">
