--- a/templates/pages/apropos.html.twig
+++ b/templates/pages/apropos.html.twig
@@ -7,19 +7,13 @@
 {% block body %}
 
 	<div class="container">
-		<h1>Garage Vincent Parrot</h1>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
+		<h1 class="mt-5 mb-5">Bienvenue chez Garage V. Parrot !</h1>
+		<p>Fondé en 2021 par Vincent Parrot, notre garage automobile est né de la passion pour la mécanique et l'engagement envers la satisfaction de nos clients. Fort de plus de 15 ans d'expérience dans le domaine de la réparation automobile, Vincent a créé cet établissement avec une vision claire : offrir un service de qualité, personnalisé et fiable à tous ceux qui franchissent nos portes.</p>
+		<p>Depuis notre ouverture, nous nous sommes engagés à fournir une gamme complète de services pour répondre à tous les besoins de nos clients en matière de réparation et d'entretien automobile. Que ce soit pour des travaux de carrosserie, des interventions mécaniques ou des entretiens réguliers, notre équipe hautement qualifiée est là pour garantir la performance et la sécurité de votre véhicule.</p>
+		<p>Chez Garage V. Parrot, nous ne nous contentons pas seulement de réparer des voitures, nous les chérissons comme les nôtres. Nous comprenons à quel point il est important pour nos clients de se sentir en confiance lorsque confiant leur véhicule à un atelier, c'est pourquoi nous nous efforçons chaque jour de mériter cette confiance.</p>
+		<p>Nous ne sommes pas seulement un garage, mais aussi un partenaire de confiance pour nos clients. En plus de nos services de réparation et d'entretien, nous proposons également une sélection de véhicules d'occasion de qualité, soigneusement inspectés et préparés pour une nouvelle aventure sur la route.</p>
+		<p>Chez Garage V. Parrot, notre engagement envers l'excellence et la satisfaction client est au cœur de tout ce que nous faisons. Nous sommes fiers de notre travail et nous nous efforçons constamment de dépasser les attentes de nos clients.</p>
+		<p>Nous vous invitons à nous rendre visite et à découvrir par vous-même l'expérience Garage V. Parrot. Nous sommes impatients de vous accueillir et de prendre soin de votre véhicule.</p>
+		<p>Vincent Parrot et toute l'équipe du Garage V. Parrot</p>
 	</div>
 {% endblock %}
