--- a/templates/occasions/_filter.html.twig
+++ b/templates/occasions/_filter.html.twig
@@ -43,8 +43,8 @@
      {{ form_row(form.marque, { 'attr': {} }) }}    
     </div>
   </div>
-
-  <h4>Modele:</h4>
+  
+  <h4>Modèles:</h4>
   <div class="row">
     <div class="col-md-12">
      {{ form_row(form.modele, { 'attr': {} }) }}    
