--- a/templates/occasions/vehicule.html.twig
+++ b/templates/occasions/vehicule.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 	<div class="container mt-3">
-		<h1>{{exemplaire.marque}} - {{exemplaire.modele}}</h1>
+		<h1 class="mt-5 mb-5">{{exemplaire.marque}} - {{exemplaire.modele}}</h1>
 		<div class="col-lg-12">
 			<div class="card mb-3">
 				<h3 class="card-header">{{exemplaire.titre}}</h3>
