--- a/templates/pages/mentions.html.twig
+++ b/templates/pages/mentions.html.twig
@@ -7,18 +7,11 @@
 {% block body %}
 
 	<div class="container">
-		<h1>Mentions légales</h1>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo soluta obcaecati ex, voluptas quam qui. Temporibus inventore ab, earum reiciendis sed quibusdam ullam consectetur quae natus architecto voluptas, excepturi mollitia!</p>
+		<h1 class="mt-5 mb-5">Mentions Légales</h1>
+		<p>Le site web du Garage V. Parrot est édité par [Nom de l'entreprise], dont le siège social est situé à [Adresse]. Il est enregistré sous le numéro [Numéro d'enregistrement] et son numéro de TVA est [Numéro de TVA].</p>
+		<p>Directeur de la publication : Vincent Parrot</p>
+		<p>Le site est hébergé par [Nom de l'hébergeur] dont le siège social est situé à [Adresse de l'hébergeur].</p>
+		<p>Pour toute question ou réclamation, veuillez nous contacter à l'adresse électronique suivante : [Adresse e-mail].</p>
+		<p>Le Garage V. Parrot est une entreprise enregistrée et opérant en conformité avec les lois en vigueur. Nous nous réservons le droit de modifier le contenu de ce site et ces mentions légales à tout moment. Il est de votre responsabilité de consulter régulièrement ces mentions pour être informé des mises à jour.</p>
 	</div>
 {% endblock %}
