--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,7 +15,7 @@
             </div>
         {% endif %}
 
-        <h1 class="h3 mt-3 mb-5 font-weight-normal">Veuillez vous connecter</h1>
+        <h1 class="mt-5 mb-5">Veuillez vous connecter</h1>
         <label for="inputEmail">Email</label>
         <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
         <label class="mt-3" for="inputPassword">Mot de passe</label>
