add resoureces & SQL insertions

--- a/templates/employes/dashboard.html.twig
+++ b/templates/employes/dashboard.html.twig
@@ -2,6 +2,6 @@
 
 {% block content_title %}Tableau de bord{% endblock %}
 {% block main %}
-    <h2>Ajouter un vehicule sur le site web</h2>
+    <h2>Ajouter, modifier, supprimer  un vehicule sur le site web</h2>
     <h2>Ajouter, modérée, approuver un témoignage</h2>
 {% endblock %}
