--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -21,7 +21,12 @@
 			</table>
 		</div>
 		<div class="col-md-4 mt-3 mb-3">
-			© Copyright 2024
+			<p>© Copyright 2024</p>
+			<a href="https://www.x.com" target="_blank" class="text-white px-2"><i class="fa-brands fa-x"></i></a>
+			<a href="https://www.instagram.com" target="_blank" class="text-white px-2"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.facebook.com" target="_blank" class="text-white px-2"><i class="fa-brands fa-facebook"></i></a>
+      <a href="https://www.linkedin.com" target="_blank" class="text-white px-2"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://www.youtube.com" target="_blank" class="text-white px-2"><i class="fa-brands fa-youtube"></i></a>
 		</div>
 		<div class="col-md-4 mt-3">
 			<a class="nav-link" href="{{path('page_cgu')}}">CGU</a>
