--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -1,11 +1,13 @@
-<div class="bg-dark text-warning">DEMO -> Application web réalisé pour une évaluation en cours de formation.</div>
+<div class="bg-dark text-center py-2 text-warning">
+  Site Web démonstratif -> Application web réalisé pour une évaluation en cours de formation.
+</div>
 <nav class="navbar navbar-expand-lg bg-dark text-white" data-bs-theme="dark">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="{{path('app_home')}}">
+		<a class="navbar-brand" href="{{path('app_home')}}" title="Accueil">
 			<img src="/images/logo.png" alt="V. PARROT" width="120" >
     	</a>
         <i class="fa-sharp fa-solid fa-phone fa-shake"></i>
-        <a class="navbar-brand ms-2" href="tel://+33123456789">01 23 45 67 89</a>
+        <a class="navbar-brand ms-2" href="tel://+33123456789" title="Appelez-nous">01 23 45 67 89</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -22,7 +24,6 @@
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="{{path('app_contact')}}">CONTACT</a>
-					{#<a class="nav-link" href="https://127.0.0.1:8000/contact">CONTACT</a>#}
 				</li>
 				<li class="nav-item">
 					<a class="btn btn-primary ms-2 mt-2" href="{{path('app_login')}}">Connexion</a>
