--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -23,7 +23,8 @@
       </div>
 		</div>
 		<div class="col-md-4 mt-3 mb-3">
-			<p>© Copyright 2024</p>
+			<p>© Copyright 2024<br></p>
+      <p>Retrouvez-nous sur:</p>
 			<a href="https://www.x.com" target="_blank" title="X" class="text-white px-2"><i class="fa-brands fa-x"></i></a>
 			<a href="https://www.instagram.com" target="_blank" title="Instagram" class="text-white px-2"><i class="fa-brands fa-instagram"></i></a>
       <a href="https://www.facebook.com" target="_blank" title="Facebook" class="text-white px-2"><i class="fa-brands fa-facebook"></i></a>
@@ -31,8 +32,8 @@
       <a href="https://www.youtube.com" target="_blank" title="YouTube" class="text-white px-2"><i class="fa-brands fa-youtube"></i></a>
 		</div>
 		<div class="col-md-4 mt-3 mb-5">
-			<a class="nav-link" href="{{path('page_cgu')}}">CGU</a>
-			<a class="nav-link" href="{{path('mentions_legales')}}">Mentions légales</a>
+			<a class="nav-link" href="{{path('page_cgu')}}" title="Conditions Générales d'Utilisation">CGU</a>
+			<a class="nav-link" href="{{path('mentions_legales')}}" title="Mentions légales">Mentions légales</a>
 			<p><br><br>
 				<i class="fa-solid fa-location-dot fa-bounce"></i>
 				Adresse :<a class="nav-link" href="https://goo.gl/maps/s761phYgSsD2Vii78" target="_blank" title="Toulouse, France">Toulouse, France</a>
