add link to GitHub Repo footer section

--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -30,6 +30,8 @@
       <a href="https://www.facebook.com" target="_blank" title="Facebook" class="text-white px-2"><i class="fa-brands fa-facebook"></i></a>
       <a href="https://www.linkedin.com" target="_blank" title="Linkedin" class="text-white px-2"><i class="fa-brands fa-linkedin"></i></a>
       <a href="https://www.youtube.com" target="_blank" title="YouTube" class="text-white px-2"><i class="fa-brands fa-youtube"></i></a>
+      <p><br>Repo GitHub Application WEB Garage Vincent PARROT</p>
+      <a href="https://github.com/Techni-Dan/VParrotWebApp" target="_blank" title="Repo GitHub Application WEB Garage Vincent PARROT" class="text-white px-2"><i class="fa-brands fa-github"></i></a>
 		</div>
 		<div class="col-md-4 mt-3 mb-5">
 			<a class="nav-link" href="{{path('page_cgu')}}" title="Conditions Générales d'Utilisation">CGU</a>
