--- a/templates/occasions/_filter.html.twig
+++ b/templates/occasions/_filter.html.twig
@@ -43,12 +43,12 @@
      {{ form_row(form.marque, { 'attr': {} }) }}    
     </div>
   </div>
-  
+
   <h4>Modèles:</h4>
   <div class="row">
-    <div class="col-md-12">
-     {{ form_row(form.modele, { 'attr': {} }) }}    
-    </div>
+  <div class="col-md-12">
+    {{ form_row(form.modele, { 'attr': {'class': 'js-model-select' } }) }}    
+  </div>
   </div>
 
  <h4>Catégories:</h4>
